--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive" style="height: 300px">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -24,6 +24,15 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <p *ngFor="let ingredient of recipe.ingredients">
+      {{ ingredient.name }} - {{ ingredient.amount }}
+    </p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <p>
+      {{ recipe.description }}
+    </p>
   </div>
 </div>
