--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,7 @@
         Manage recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shoping list</a></li>
+        <li><a style="cursor: pointer" (click)="addToShoppingList()">To Shoping list</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -24,9 +24,11 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <p *ngFor="let ingredient of recipe.ingredients">
-      {{ ingredient.name }} - {{ ingredient.amount }}
-    </p>
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients">
+          {{ ingredient.name }} - {{ ingredient.amount }}
+      </li>
+    </ul>
   </div>
 </div>
 <div class="row">
